{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 1149,
  "lineage": "86f4852f-fb03-9217-df5a-23c7c87fffc7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:security-group/sg-02f1766bb1cb90c86",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02f1766bb1cb90c86",
            "ingress": [],
            "name": "jpr-cluster-cluster-2025071218273591510000000f",
            "name_prefix": "jpr-cluster-cluster-",
            "owner_id": "160784268901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jpr-cluster-cluster"
            },
            "tags_all": {
              "Name": "jpr-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:security-group/sg-0aa8e0af639933571",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0aa8e0af639933571",
            "ingress": [],
            "name": "jpr-cluster-node-2025071218273545050000000e",
            "name_prefix": "jpr-cluster-node-",
            "owner_id": "160784268901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jpr-cluster-node",
              "kubernetes.io/cluster/jpr-cluster": "owned"
            },
            "tags_all": {
              "Name": "jpr-cluster-node",
              "kubernetes.io/cluster/jpr-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-623375580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f1766bb1cb90c86",
            "security_group_rule_id": "sgr-00508d428c4805b36",
            "self": false,
            "source_security_group_id": "sg-0aa8e0af639933571",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3372999138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-00b25bf52d0ee46e6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1561090811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-080523b42598e36f2",
            "self": false,
            "source_security_group_id": "sg-02f1766bb1cb90c86",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3871411844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-0850a65a5c356f6c0",
            "self": false,
            "source_security_group_id": "sg-02f1766bb1cb90c86",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-797141266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-0727e20ad570b7eee",
            "self": false,
            "source_security_group_id": "sg-02f1766bb1cb90c86",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1021269299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-091abe6d7ea67dc1c",
            "self": false,
            "source_security_group_id": "sg-02f1766bb1cb90c86",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1484678904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-0594aa89bfeac189c",
            "self": false,
            "source_security_group_id": "sg-02f1766bb1cb90c86",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2567344659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-0ad9174232e2ba0bb",
            "self": false,
            "source_security_group_id": "sg-02f1766bb1cb90c86",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-195443209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-056f40b5f3e8e2d40",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-447487869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-041e1893928923c39",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3203644562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0aa8e0af639933571",
            "security_group_rule_id": "sgr-0ec11984f67d2aef4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:security-group/sg-07a35ce09ea6352f8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-07a35ce09ea6352f8",
            "ingress": [],
            "name": "jpr-cluster-cluster-2025071218273225690000000f",
            "name_prefix": "jpr-cluster-cluster-",
            "owner_id": "160784268901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jpr-cluster-cluster"
            },
            "tags_all": {
              "Name": "jpr-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:security-group/sg-03f1fc6aa43517d5a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-03f1fc6aa43517d5a",
            "ingress": [],
            "name": "jpr-cluster-node-2025071218273222540000000e",
            "name_prefix": "jpr-cluster-node-",
            "owner_id": "160784268901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jpr-cluster-node",
              "kubernetes.io/cluster/jpr-cluster": "owned"
            },
            "tags_all": {
              "Name": "jpr-cluster-node",
              "kubernetes.io/cluster/jpr-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3154036840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07a35ce09ea6352f8",
            "security_group_rule_id": "sgr-0e1f2644fd74304d0",
            "self": false,
            "source_security_group_id": "sg-03f1fc6aa43517d5a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_secondary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2279863534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-01bf1df0dfd7a9090",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2532082040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-023576453ccf8f558",
            "self": false,
            "source_security_group_id": "sg-07a35ce09ea6352f8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3159921043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-0351e8918bb9f2d8f",
            "self": false,
            "source_security_group_id": "sg-07a35ce09ea6352f8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1964701189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-084f9c29abe7d844e",
            "self": false,
            "source_security_group_id": "sg-07a35ce09ea6352f8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1715915300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-0ef351e326d213d1a",
            "self": false,
            "source_security_group_id": "sg-07a35ce09ea6352f8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-48757231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-021dccf581cece1d5",
            "self": false,
            "source_security_group_id": "sg-07a35ce09ea6352f8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2802013930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-07c239c1eaa5ba365",
            "self": false,
            "source_security_group_id": "sg-07a35ce09ea6352f8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3738380846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-0a662180e78aff813",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1052049182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-0a03a6c5c655ac7e2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2599116017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03f1fc6aa43517d5a",
            "security_group_rule_id": "sgr-016c3849becd9ca62",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_secondary.aws_security_group.cluster",
            "module.eks_secondary.aws_security_group.node",
            "module.vpc_secondary.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:network-acl/acl-08862e5f5d89dca88",
            "default_network_acl_id": "acl-08862e5f5d89dca88",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08862e5f5d89dca88",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "160784268901",
            "subnet_ids": [
              "subnet-029e365f46582c0d4",
              "subnet-099e0d94fb1aa96f2",
              "subnet-09e8146697b374e91"
            ],
            "tags": {
              "Name": "events-vpc-default"
            },
            "tags_all": {
              "Name": "events-vpc-default"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:route-table/rtb-01a8caafe8f9f746c",
            "default_route_table_id": "rtb-01a8caafe8f9f746c",
            "id": "rtb-01a8caafe8f9f746c",
            "owner_id": "160784268901",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "events-vpc-default"
            },
            "tags_all": {
              "Name": "events-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:security-group/sg-02fa538d7549ce35e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02fa538d7549ce35e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "160784268901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "events-vpc-default"
            },
            "tags_all": {
              "Name": "events-vpc-default"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061dab2badf284ee9",
            "arn": "arn:aws:ec2:us-east-1:160784268901:elastic-ip/eipalloc-061dab2badf284ee9",
            "domain": "vpc",
            "id": "eipalloc-061dab2badf284ee9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-82-137-199.compute-1.amazonaws.com",
            "public_ip": "54.82.137.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "events-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "events-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:internet-gateway/igw-0fe53b292fefbe06a",
            "id": "igw-0fe53b292fefbe06a",
            "owner_id": "160784268901",
            "tags": {
              "Name": "events-vpc"
            },
            "tags_all": {
              "Name": "events-vpc"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061dab2badf284ee9",
            "association_id": "eipassoc-05356840b5269627f",
            "connectivity_type": "public",
            "id": "nat-0c813658802718260",
            "network_interface_id": "eni-0ffa199fb2274f758",
            "private_ip": "10.0.4.247",
            "public_ip": "54.82.137.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f8906d7072822a8",
            "tags": {
              "Name": "events-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "events-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bc5bab2157d793ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c813658802718260",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc5bab2157d793ff",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe53b292fefbe06a",
            "id": "r-rtb-020c8b9b4aba8cba31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020c8b9b4aba8cba3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:route-table/rtb-0bc5bab2157d793ff",
            "id": "rtb-0bc5bab2157d793ff",
            "owner_id": "160784268901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "events-vpc-private"
            },
            "tags_all": {
              "Name": "events-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:route-table/rtb-020c8b9b4aba8cba3",
            "id": "rtb-020c8b9b4aba8cba3",
            "owner_id": "160784268901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "events-vpc-public"
            },
            "tags_all": {
              "Name": "events-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000c1bdfce55d2468",
            "route_table_id": "rtb-0bc5bab2157d793ff",
            "subnet_id": "subnet-09e8146697b374e91"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fd95475cd6ec026",
            "route_table_id": "rtb-0bc5bab2157d793ff",
            "subnet_id": "subnet-029e365f46582c0d4"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8e4ca638dc69dc1",
            "route_table_id": "rtb-0bc5bab2157d793ff",
            "subnet_id": "subnet-099e0d94fb1aa96f2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066e5813800fde8cc",
            "route_table_id": "rtb-020c8b9b4aba8cba3",
            "subnet_id": "subnet-02f8906d7072822a8"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d786e0dd0849e91",
            "route_table_id": "rtb-020c8b9b4aba8cba3",
            "subnet_id": "subnet-08b319938cf994766"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000c667615edafb94",
            "route_table_id": "rtb-020c8b9b4aba8cba3",
            "subnet_id": "subnet-05bb9a8f64d8622b1"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:subnet/subnet-09e8146697b374e91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e8146697b374e91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:subnet/subnet-029e365f46582c0d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029e365f46582c0d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:subnet/subnet-099e0d94fb1aa96f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099e0d94fb1aa96f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-private-us-east-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-private-us-east-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:subnet/subnet-02f8906d7072822a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f8906d7072822a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:subnet/subnet-08b319938cf994766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b319938cf994766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:subnet/subnet-05bb9a8f64d8622b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb9a8f64d8622b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dd842d69829c45b5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_primary",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160784268901:vpc/vpc-0dd842d69829c45b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08862e5f5d89dca88",
            "default_route_table_id": "rtb-01a8caafe8f9f746c",
            "default_security_group_id": "sg-02fa538d7549ce35e",
            "dhcp_options_id": "dopt-05536172250631dce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd842d69829c45b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a8caafe8f9f746c",
            "owner_id": "160784268901",
            "tags": {
              "Name": "events-vpc"
            },
            "tags_all": {
              "Name": "events-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:network-acl/acl-0751a6b92e0e0b6e6",
            "default_network_acl_id": "acl-0751a6b92e0e0b6e6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0751a6b92e0e0b6e6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "160784268901",
            "subnet_ids": [
              "subnet-025e743550a486a9b",
              "subnet-062bb0ae341aadda2",
              "subnet-06adee09b54d1938d",
              "subnet-0bc09b9fc1460b706",
              "subnet-0c73170fbc3e453d3",
              "subnet-0c937b5441e7a2c6d"
            ],
            "tags": {
              "Name": "events-vpc-default"
            },
            "tags_all": {
              "Name": "events-vpc-default"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:route-table/rtb-039073fbe4522b4c4",
            "default_route_table_id": "rtb-039073fbe4522b4c4",
            "id": "rtb-039073fbe4522b4c4",
            "owner_id": "160784268901",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "events-vpc-default"
            },
            "tags_all": {
              "Name": "events-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:security-group/sg-0196c207fd5b21aac",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0196c207fd5b21aac",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "160784268901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "events-vpc-default"
            },
            "tags_all": {
              "Name": "events-vpc-default"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9fa2aa21567eaed",
            "arn": "arn:aws:ec2:us-east-2:160784268901:elastic-ip/eipalloc-0a9fa2aa21567eaed",
            "domain": "vpc",
            "id": "eipalloc-0a9fa2aa21567eaed",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-188-238-145.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.238.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "events-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "events-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:internet-gateway/igw-06be0858bf3d120ba",
            "id": "igw-06be0858bf3d120ba",
            "owner_id": "160784268901",
            "tags": {
              "Name": "events-vpc"
            },
            "tags_all": {
              "Name": "events-vpc"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9fa2aa21567eaed",
            "association_id": "eipassoc-0d4a25058be3ace74",
            "connectivity_type": "public",
            "id": "nat-01ad042517adb59b9",
            "network_interface_id": "eni-08d47ab00d54a1e2d",
            "private_ip": "10.0.4.68",
            "public_ip": "18.188.238.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c937b5441e7a2c6d",
            "tags": {
              "Name": "events-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "events-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0453f16fe20ac72b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ad042517adb59b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0453f16fe20ac72b9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_nat_gateway.this",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06be0858bf3d120ba",
            "id": "r-rtb-0b81dac6108a259da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b81dac6108a259da",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:route-table/rtb-0453f16fe20ac72b9",
            "id": "rtb-0453f16fe20ac72b9",
            "owner_id": "160784268901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "events-vpc-private"
            },
            "tags_all": {
              "Name": "events-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:route-table/rtb-0b81dac6108a259da",
            "id": "rtb-0b81dac6108a259da",
            "owner_id": "160784268901",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "events-vpc-public"
            },
            "tags_all": {
              "Name": "events-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b8bcc07fc2bb08",
            "route_table_id": "rtb-0453f16fe20ac72b9",
            "subnet_id": "subnet-062bb0ae341aadda2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a12d3317d05989cd",
            "route_table_id": "rtb-0453f16fe20ac72b9",
            "subnet_id": "subnet-025e743550a486a9b"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c0209a594365c2e",
            "route_table_id": "rtb-0453f16fe20ac72b9",
            "subnet_id": "subnet-06adee09b54d1938d"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0772bfd6942f01",
            "route_table_id": "rtb-0b81dac6108a259da",
            "subnet_id": "subnet-0c937b5441e7a2c6d"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ecca062bf331098",
            "route_table_id": "rtb-0b81dac6108a259da",
            "subnet_id": "subnet-0c73170fbc3e453d3"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767080a29c6f2a23",
            "route_table_id": "rtb-0b81dac6108a259da",
            "subnet_id": "subnet-0bc09b9fc1460b706"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:subnet/subnet-062bb0ae341aadda2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062bb0ae341aadda2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:subnet/subnet-025e743550a486a9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025e743550a486a9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:subnet/subnet-06adee09b54d1938d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06adee09b54d1938d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-private-us-east-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-private-us-east-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:subnet/subnet-0c937b5441e7a2c6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c937b5441e7a2c6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:subnet/subnet-0c73170fbc3e453d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73170fbc3e453d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:subnet/subnet-0bc09b9fc1460b706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc09b9fc1460b706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160784268901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "events-vpc-public-us-east-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "events-vpc-public-us-east-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f10ff422f4821161"
          },
          "dependencies": [
            "data.aws_availability_zones.available_secondary",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:160784268901:vpc/vpc-0f10ff422f4821161",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0751a6b92e0e0b6e6",
            "default_route_table_id": "rtb-039073fbe4522b4c4",
            "default_security_group_id": "sg-0196c207fd5b21aac",
            "dhcp_options_id": "dopt-0a44b9c3c9eca82a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f10ff422f4821161",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039073fbe4522b4c4",
            "owner_id": "160784268901",
            "tags": {
              "Name": "events-vpc"
            },
            "tags_all": {
              "Name": "events-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}